Some starting point for some auth stuff

--- a/test/Swync.integration/Swync.integration.csproj
+++ b/test/Swync.integration/Swync.integration.csproj
@@ -17,4 +17,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Swync.core\Swync.core.csproj" />
+  </ItemGroup>
 </Project>
