--- a/src/Swync.core/Swync.core.csproj
+++ b/src/Swync.core/Swync.core.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.OneDriveSDK" Version="2.0.7" />
+    <PackageReference Include="Microsoft.OneDriveSDK.Authentication" Version="1.0.10" />
   </ItemGroup>
 </Project>
