--- a/src/Swync.core/Swync.core.csproj
+++ b/src/Swync.core/Swync.core.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.OneDriveSDK" Version="2.0.7" />
     <PackageReference Include="Microsoft.OneDriveSDK.Authentication" Version="1.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
