--- a/test/Swync.integration/Swync.integration.csproj
+++ b/test/Swync.integration/Swync.integration.csproj
@@ -19,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Swync.core\Swync.core.csproj" />
+    <ProjectReference Include="..\Swync.test.common\Swync.test.common.csproj" />
   </ItemGroup>
 </Project>
