Preparation for capturing HTTP requests for testing purposes

--- a/test/Swync.test.common/Swync.test.common.csproj
+++ b/test/Swync.test.common/Swync.test.common.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Swync.core\Swync.core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interceptors" />
+  </ItemGroup>
 </Project>
